<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_info"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="serif"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            android:src="@drawable/iotinfarm"
            >
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_iot"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:layout_marginTop="10dp"
            >

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_iot_in_farm"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:layout_marginTop="5dp"
            >

        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/muctieu"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:layout_marginTop="5dp"
            >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ketluan"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:layout_marginTop="5dp"
            >

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_system_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="serif"
            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleCambien"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="17sp"
            android:fontFamily="serif"
            >
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contexDoam"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="serif"
            >
        </TextView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/doamcaycoi"
            android:paddingTop="10dp">

        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contexCambien"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:layout_marginTop="10dp"
            >
        </TextView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/cambien"
            android:paddingTop="10dp">
        </ImageView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleESP"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="17sp"
            android:fontFamily="serif"
            android:layout_marginTop="10dp"
            >
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contexESP"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:layout_marginTop="10dp">
        </TextView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="300dp"
            android:src="@drawable/wifimodule"
            android:paddingTop="10dp">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleFirebase"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="17sp"
            android:fontFamily="serif"
            android:layout_marginTop="20dp"
            >
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contexFirebase"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:fontFamily="serif"
            android:layout_marginTop="10dp">
        </TextView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:src="@drawable/firebase"
            android:paddingTop="10dp">
        </ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titlevaitrofirebase"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="15sp"
            android:fontFamily="serif"
            android:layout_marginTop="20dp"
            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contextvaitro1"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="serif"
            android:layout_marginTop="20dp"
            >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contextvaitro2"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:fontFamily="serif"
            android:layout_marginTop="20dp"
            >
        </TextView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="170dp"
            android:src="@drawable/firebasesystem"
            android:layout_marginTop="10dp"
            >
        </ImageView>



    </LinearLayout>

</ScrollView>